@@ -1,7 +1,8 @@
 Revision history for Github-Backup
 
 1.04 UNREL
-    -
+    - We now save open and closed tickets. Open are in backup/issues/repo/open
+      and closed in backup/issues/repo/closed
 
 1.03    2021-11-14
     - Added 'auto_pagination => 1' to Pithub instantiation which was limiting
